Updated  preprocessing CLI notebook

--- a/ecg_preprocessing/ecg_preprocessing_cli.ipynb
+++ b/ecg_preprocessing/ecg_preprocessing_cli.ipynb
@@ -147,7 +147,7 @@
     "    <name>.log\n",
     "```\n",
     "## Notes\n",
-    "Use (/) on Windows and ^ on mac and bash. \n",
+    "Use (/) on Windows and bash . ON mac not testet , but i think it will be ^ not /. \n",
     "--name controls both the output folder and the log filename.  \n",
     "--folds overrides --split_ratio.  \n",
     "--max_samples behaves differently in fold vs non‑fold mode:  \n",
@@ -158,10 +158,99 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dca9d7aa",
+   "id": "aa922482",
    "metadata": {},
    "source": [
-    "A Loaded Example with output"
+    "An Example run from the Terminal with output:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b1e27ee",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "\n",
+    "MY@MY-PC MINGW64 ~/OneDrive/Desktop/Bachelor_Project/SEARCH_AF_detection_OsloMet_BachelorGroup (dev/muzaffar)\n",
+    "$ uv run python ecg_preprocessing/ecg_data_loader.py \\\n",
+    "    --dataset_path \"C:\\Users\\MY\\Downloads\\Dataset\\ptb-xl-a-large-publicly-available-electrocardiography-dataset-1.0.3\" \\\n",
+    "    --name ptbxl\n",
+    "\n",
+    "\n",
+    "FULL DATASET OVERVIEW\n",
+    "  Total records : 21799\n",
+    "  Sampling rates: [500]\n",
+    "  Leads         : [12]\n",
+    "  Unique labels : 71\n",
+    "  Labels found  :\n",
+    "    NORM(9514), LVOLT(182), SR(16748), SBRAD(637), IMI(2676), ABQRS(3327), SARRH(772), AFLT(73)\n",
+    "    AFIB(1514), NDT(1825), NST_(767), DIG(181), LVH(2132), LPFB(177), LNGQT(117), LAFB(1623)\n",
+    "    IRBBB(1118), RAO/RAE(99), RVH(126), IVCD(787), LMI(201), ASMI(2357), AMI(353), ISCAL(659)\n",
+    "    1AVB(793), STACH(826), PACE(294), ISCLA(140), SEHYP(29), ISCIL(179), ILMI(478), ISC_(1272)\n",
+    "    PVC(1143), CRBBB(541), CLBBB(536), ALMI(288), ANEUR(104), ISCAS(169), TAB_(35), HVOLT(62)\n",
+    "    PAC(398), LOWT(438), STD_(1009), EL(96), NT_(423), QWAVE(548), INVT(294), LPR(340), VCLVH(875)\n",
+    "    LAO/LAE(426), ILBBB(77), ISCIN(218), SVTAC(27), INJAS(214), INJAL(145), IPMI(33), ISCAN(44)\n",
+    "    INJLA(17), BIGU(82), TRIGU(20), IPLMI(51), 3AVB(16), INJIL(15), 2AVB(14), PRC(S)(10), PSVT(24)\n",
+    "    PMI(17), STE_(28), WPW(79), INJIN(18), SVARR(157)\n",
+    "\n",
+    "[2025-12-25 14:32:15,952] INFO: DATASET SUMMARY (RAW RECORDS)\n",
+    "[2025-12-25 14:32:15,952] INFO:   Total records  : 10991\n",
+    "[2025-12-25 14:32:15,953] INFO:   Total patients : 10069\n",
+    "[2025-12-25 14:32:15,953] INFO:   AFIB records   : 1514\n",
+    "[2025-12-25 14:32:15,953] INFO:   NORMAL records : 9477\n",
+    "[2025-12-25 14:32:15,955] INFO: BALANCING RULE APPLIED (RECORD LEVEL)\n",
+    "[2025-12-25 14:32:15,955] INFO:   AFIB kept   : 1514\n",
+    "[2025-12-25 14:32:15,955] INFO:   NORMAL kept : 1514\n",
+    "[2025-12-25 14:32:15,955] INFO:   Total kept  : 3028\n",
+    "500Hz: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3028/3028 [00:01<00:00, 1532.26it/s] \n",
+    "[2025-12-25 14:32:17,938] INFO: [500Hz] SEGMENTS CREATED: 3028\n",
+    "[2025-12-25 14:32:17,938] INFO: [500Hz] SEGMENT DISTRIBUTION (BEFORE BALANCING)\n",
+    "[2025-12-25 14:32:17,938] INFO:   AFIB segments   : 1514\n",
+    "[2025-12-25 14:32:17,943] INFO:   NORMAL segments : 1514\n",
+    "[2025-12-25 14:32:17,943] INFO:   TOTAL segments  : 3028\n",
+    "[2025-12-25 14:32:17,943] INFO: [500Hz] GLOBAL SEGMENT BALANCE APPLIED\n",
+    "[2025-12-25 14:32:17,943] INFO:   AFIB segments   : 1514\n",
+    "[2025-12-25 14:32:17,943] INFO:   NORMAL segments : 1514\n",
+    "[2025-12-25 14:32:17,945] INFO:   TOTAL segments  : 3028\n",
+    "[2025-12-25 14:32:18,741] INFO: [500Hz] saved train.pt (samples=2136, AFIB=1075, NORMAL=1061)\n",
+    "[2025-12-25 14:32:18,936] INFO: [500Hz] saved val.pt (samples=598, AFIB=295, NORMAL=303)\n",
+    "[2025-12-25 14:32:19,036] INFO: [500Hz] saved test.pt (samples=294, AFIB=144, NORMAL=150)\n",
+    "250Hz: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3028/3028 [00:03<00:00, 810.31it/s]\n",
+    "[2025-12-25 14:32:22,773] INFO: [250Hz] SEGMENTS CREATED: 3028\n",
+    "[2025-12-25 14:32:22,774] INFO: [250Hz] SEGMENT DISTRIBUTION (BEFORE BALANCING)\n",
+    "[2025-12-25 14:32:22,774] INFO:   AFIB segments   : 1514\n",
+    "[2025-12-25 14:32:22,774] INFO:   NORMAL segments : 1514\n",
+    "[2025-12-25 14:32:22,774] INFO:   TOTAL segments  : 3028\n",
+    "[2025-12-25 14:32:22,776] INFO: [250Hz] GLOBAL SEGMENT BALANCE APPLIED\n",
+    "[2025-12-25 14:32:22,776] INFO:   AFIB segments   : 1514\n",
+    "[2025-12-25 14:32:22,776] INFO:   NORMAL segments : 1514\n",
+    "[2025-12-25 14:32:22,776] INFO:   TOTAL segments  : 3028\n",
+    "[2025-12-25 14:32:23,409] INFO: [250Hz] saved train.pt (samples=2136, AFIB=1075, NORMAL=1061)\n",
+    "[2025-12-25 14:32:23,506] INFO: [250Hz] saved val.pt (samples=598, AFIB=295, NORMAL=303)\n",
+    "[2025-12-25 14:32:23,552] INFO: [250Hz] saved test.pt (samples=294, AFIB=144, NORMAL=150)\n",
+    "[2025-12-25 14:32:23,552] INFO: [250Hz] saved test.pt (samples=294, AFIB=144, NORMAL=150)\n",
+    "100Hz: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3028/3028 [00:03<00:00, 852.48it/s] \n",
+    "[2025-12-25 14:32:27,105] INFO: [100Hz] SEGMENTS CREATED: 3028\n",
+    "[2025-12-25 14:32:27,106] INFO: [100Hz] SEGMENT DISTRIBUTION (BEFORE BALANCING)\n",
+    "[2025-12-25 14:32:27,106] INFO:   AFIB segments   : 1514\n",
+    "[2025-12-25 14:32:27,106] INFO:   NORMAL segments : 1514\n",
+    "[2025-12-25 14:32:27,106] INFO:   TOTAL segments  : 3028\n",
+    "[2025-12-25 14:32:27,107] INFO: [100Hz] GLOBAL SEGMENT BALANCE APPLIED\n",
+    "[2025-12-25 14:32:27,107] INFO:   AFIB segments   : 1514\n",
+    "[2025-12-25 14:32:27,107] INFO:   NORMAL segments : 1514\n",
+    "[2025-12-25 14:32:27,107] INFO:   TOTAL segments  : 3028\n",
+    "[2025-12-25 14:32:27,472] INFO: [100Hz] saved train.pt (samples=2136, AFIB=1075, NORMAL=1061)\n",
+    "[2025-12-25 14:32:27,510] INFO: [100Hz] saved val.pt (samples=598, AFIB=295, NORMAL=303)\n",
+    "[2025-12-25 14:32:27,527] INFO: [100Hz] saved test.pt (samples=294, AFIB=144, NORMAL=150)\n",
+    "``` \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c188537",
+   "metadata": {},
+   "source": [
+    "An Example run from the Notebook with output:"
    ]
   },
   {
